--- a/core/build.gradle
+++ b/core/build.gradle
@@ -43,13 +43,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 }
 
-//apply plugin: 'com.novoda.bintray-release'
-//publish {
-////    repoName = 'WinfoSdk'//不指明，默认是上传到maven,指明的话这里的名字需要和你创建的仓库的名字一样
-//    userOrg = 'qiliking'//bintray.com你的用户名
-//    groupId = 'com.qlk.lib'//jcenter上的路径
-//    artifactId = 'smart-core'//项目名称
-//    publishVersion = '0.0.9'//版本号
-//    desc = 'my first module'//描述，不重要
-//    website = 'https://github.com/qlk'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
-//}
+apply plugin: 'com.novoda.bintray-release'
+publish {
+//    repoName = 'WinfoSdk'//不指明，默认是上传到maven,指明的话这里的名字需要和你创建的仓库的名字一样
+    userOrg = 'qiliking'//bintray.com你的用户名
+    groupId = 'com.qlk.lib'//jcenter上的路径
+    artifactId = 'smart-core'//项目名称
+    publishVersion = '0.1.0'//版本号
+    desc = 'my first module'//描述，不重要
+    website = 'https://github.com/qlk'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+}
