--- a/realm/build.gradle
+++ b/realm/build.gradle
@@ -51,13 +51,13 @@ dependencies {
     implementation 'com.qlk.lib:smart-core:0.0.9'
 }
 
-apply plugin: 'com.novoda.bintray-release'
-publish {
-//    repoName = 'WinfoSdk'//不指明，默认是上传到maven,指明的话这里的名字需要和你创建的仓库的名字一样
-    userOrg = 'qiliking'//bintray.com你的用户名
-    groupId = 'com.qlk.lib'//jcenter上的路径
-    artifactId = 'smart-realm'//项目名称
-    publishVersion = '0.3.0'//版本号
-    desc = 'my first module'//描述，不重要
-    website = 'https://github.com/qlk'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
-}
+//apply plugin: 'com.novoda.bintray-release'
+//publish {
+////    repoName = 'WinfoSdk'//不指明，默认是上传到maven,指明的话这里的名字需要和你创建的仓库的名字一样
+//    userOrg = 'qiliking'//bintray.com你的用户名
+//    groupId = 'com.qlk.lib'//jcenter上的路径
+//    artifactId = 'smart-realm'//项目名称
+//    publishVersion = '0.3.1'//版本号
+//    desc = 'my first module'//描述，不重要
+//    website = 'https://github.com/qlk'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+//}
